# perl-check

./: .gitignore  .perl-clang-tidy  CMakeLists.txt  PerlCheck.cpp  PerlCheck.cxx  PerlCheck.h  PerlLiteralFunctionCheck.cpp  PerlLiteralFunctionCheck.h  PerlMortalFunctionCheck.cpp  PerlMortalFunctionCheck.h  PerlUndefSetpvXCheck.cpp  PerlUndefSetpvXCheck.h  PerlUndefSetsvCheck.cpp  PerlUndefSetsvCheck.h  README.md  foo.c
Tests/: CMakeLists.txt  RunClangTidy.cmake  perl-literal-get_cvn_flags-fixit.c  perl-literal-get_cvn_flags-stdout.txt  perl-literal-get_cvn_flags.c  perl-literal-hv_fetch-fixit.c  perl-literal-hv_fetch-stdout.txt  perl-literal-hv_fetch.c  perl-literal-newSVpvn-fixit.c  perl-literal-newSVpvn-stdout.txt  perl-literal-newSVpvn.c  perl-literal-newSVpvn_flags-fixit.c  perl-literal-newSVpvn_flags-stdout.txt  perl-literal-newSVpvn_flags.c  perl-literal-savepvn-fixit.c  perl-literal-savepvn-stdout.txt  perl-literal-savepvn.c  perl-literal-sv_catpvn-fixit.c  perl-literal-sv_catpvn-stdout.txt  perl-literal-sv_catpvn.c  perl-literal-sv_catpvn_flags-fixit.c  perl-literal-sv_catpvn_flags-stdout.txt  perl-literal-sv_catpvn_flags.c  perl-literal-sv_catpvn_nomg-fixit.c  perl-literal-sv_catpvn_nomg-stdout.txt  perl-literal-sv_catpvn_nomg.c  perl-literal-sv_setpvn-fixit.c  perl-literal-sv_setpvn-stdout.txt  perl-literal-sv_setpvn.c  perl-literal-sv_setpvn_mg-fixit.c  perl-literal-sv_setpvn_mg-stdout.txt  perl-literal-sv_setpvn_mg.c  perl-mortal-newSVpvn-fixit.c  perl-mortal-newSVpvn-stdout.txt  perl-mortal-newSVpvn.c  perl-mortal-newSVsv-stdout.txt  perl-mortal-newSVsv.c  perl-undef-sv_setpv-fixit.c  perl-undef-sv_setpv-stdout.txt  perl-undef-sv_setpv.c  (+7 more)
